---------------------------------------------------------------------------------------------------
Version: 0.3.23
Date: 2025-07-11
  Bugfixes:
    - Fixed platinum recipe chain
    - Fixed that some recipes could not be crafted in steel and electric furnace
---------------------------------------------------------------------------------------------------
Version: 0.3.22
Date: 2025-07-04
  Features:
    - Added items and fluids for processing platinum group metals (before called noble metals)
  Changes:
    - Removed scrap
    - Changed electrode recipe
    - Changed recipe and technology requirements for advanced chemical plant
    - Changed recipe chains for all noble metals and technologies
    - Renamed noble metals smelting technology to electrum
    - Removed electrode from iridium recipe
  Bugfixes:
    - Fixed some recipe icons
    - Fixed dependancies in tech tree
---------------------------------------------------------------------------------------------------
Version: 0.3.21
Date: 2025-06-27
  Features:
    - Added bromine recipe chain
    - Added chemicals for processing aseroids
  Changes:
    - Rhodium asteroid chunks now spawn around nauvis
    - Removed heavy gearbox from big mining drill recipe
  Bugfixes:
    - Fixed that explosives could be unlocked without having to unlock assembling-machine-2 since explosive require fluids to be crafted
    - Fixed that potassium permanganate solution could be unlocked without unlocking magnesium processing
---------------------------------------------------------------------------------------------------
Version: 0.3.20
Date: 2025-06-20
  Changes:
    - Removed recipe insulated wire from aluminum
    - Removed recipe turbine blade from titanium aluminum tin and renamed turbine blade from steel recipe to be turbine blade like the item. (you will have to select again the recipe of the assembling machine)