@@ -1680,6 +1680,26 @@ data:extend({
   },
   {
     type = "item",
+    name = "sp-rhodium-concentrate",  -- #ForRegEx# - item
+    icon = "__Spaghetorio__/graphics/icons/rhodium-concentrate.png",
+    icon_size = 64,
+    scale = 0.5,
+    subgroup = "sp-metal-concentrate",
+    order = "[rhodium-concentrate]",
+    stack_size = 50
+  },
+  {
+    type = "item",
+    name = "sp-ruthenium-concentrate",  -- #ForRegEx# - item
+    icon = "__Spaghetorio__/graphics/icons/ruthenium-concentrate.png",
+    icon_size = 64,
+    scale = 0.5,
+    subgroup = "sp-metal-concentrate",
+    order = "[ruthenium-concentrate]",
+    stack_size = 50
+  },
+  {
+    type = "item",
     name = "sp-iridium-concentrate",  -- #ForRegEx# - item
     icon = "__Spaghetorio__/graphics/icons/iridium-concentrate.png",
     icon_size = 64,
